<resources>
    <string name="app_name">DoSoptPractice</string>
    <string name="main_pw">비밀번호</string>
    <string name="main_id">ID</string>
    <string name="sign_up_id_hint">아이디를 입력해주세요</string>
    <string name="sign_up_pw_hint">비밀번호를 입력해주세요</string>
    <string name="main_login">로그인 하기</string>
    <string name="main_welcome">Welcome to SOPT</string>
    <string name="main_sign">회원가입 하기</string>
    <string name="main_sign_up">SIGN UP</string>
    <string name="sign_up_name_hint">닉네임을 입력해주세요</string>
    <string name="main_mbti">MBTI</string>
    <string name="sign_up_mbti_hint">MBTI를 입력해주세요</string>
    <string name="main_nickname">닉네임</string>
    <string name="main_name">NAME</string>
    <string name="home_profile_name">이름</string>
    <string name="home_profile_message">메시지</string>
    <string name="main_test">test</string>
    <string name="main_birth">생일</string>
</resources>